--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
     display: inline-flex;
     height: 50px;
     font-size: 2rem;
+    font-weight: bold;
     justify-content: center;
     margin-right: 8px;
     text-align: center;
