--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,13 @@
     justify-content: center;
 }
 
+h1 {
+    font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
+    margin: 0;
+}
+
 .guess {
-    margin-bottom: 8px;
+    margin: 10px 0;
 }
 
 .tile {
@@ -24,4 +29,12 @@
 
 .game-state {
     white-space: pre-wrap;
+}
+
+.divider {
+    margin: 10px 0;
+    border: none;
+    background: #eee;
+    height: 1px;
+    width: 98%;
 }
